syntax = "proto3";

package robot.config;
option go_package = "./;robot";


message RobotConfig {
  string tinkoff_api_endpoint = 1;
  string access_token = 2;
}
